<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="35dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/version_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/version_prefix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.01" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.18">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_button"
                app:icon="@drawable/ic_baseline_play_arrow_24" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:icon="@drawable/ic_baseline_settings_24" />

            <Button
                android:id="@+id/btn_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_statistics"
                app:icon="@drawable/ic_baseline_score_24" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_button"
                app:icon="@drawable/ic_baseline_info_24" />

            <Button
                android:id="@+id/btn_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses"
                app:icon="@drawable/ic_baseline_assignment_24" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>